--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00b2ff"
+    android:background="#35b8f1"
     tools:context="com.example.zerosx.uiandroid.MainActivity">
     <TextView
         android:layout_width="wrap_content"
@@ -30,7 +30,10 @@
         android:layout_height="50dp"
         android:text="next"
         android:id="@+id/btn"
+        android:textColor="#313131"
         android:layout_below="@id/edt"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:background="@drawable/btn_shape_circle"
         />
 </RelativeLayout>
